manifests/canary/canary-blue-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue
spec:
  rules:
  -   host: canary.user0.k8z.eu
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: blue
                port:
                  number: 80
