manifests/canary/canary-green-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "5"
  name: green
spec:
  rules:
  -   host: canary.user0.k8z.eu
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: green
                port:
                  number: 80
